<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <!-- Coordinates -->
	<groupId>com.aaami</groupId>
	<artifactId>ecomm</artifactId>
	<version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ecomm</name>
	<description>Multi-module(service) Spring Boot e-commerce system</description>

    <!-- ========================= -->
    <!-- Modules -->
    <!-- ========================= -->
    <modules>
        <module>shared</module>

        <module>services/product-service</module>
        <module>services/user-service</module>
        <module>services/order-service</module>
        <module>services/api-gateway</module>
    </modules>

    <!-- ========================= -->
    <!-- Properties -->
    <!-- ========================= -->
	<properties>
		<java.version>25</java.version>
        <spring.boot.version>4.0.1</spring.boot.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        
        <!-- Third-party versions -->
        <testcontainers.version>1.20.4</testcontainers.version>
        <springdoc.version>2.7.0</springdoc.version>
        <lombok.version>1.18.40</lombok.version>
        <flyway.version>11.0.0</flyway.version>

        <!-- Encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

    <!-- ========================= -->
    <!-- Dependency Management -->
    <!-- ========================= -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Testcontainers modules (explicitly managed if not in BOM) -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            
            <!-- SpringDoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            
            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            
            <!-- Flyway Database PostgreSQL (flyway-core is managed by Spring Boot BOM) -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>${flyway.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- ========================= -->
    <!-- Plugin Management -->
    <!-- ========================= -->
    <build>
        <pluginManagement>
            <plugins>
                <!-- Java Compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>

                <!-- Spring Boot Plugin (managed only) -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>

                <!-- Unit tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
